[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Operators/equal.png" type="Texture" id=1]
[ext_resource path="res://Assets/Operators/minus.png" type="Texture" id=2]
[ext_resource path="res://Assets/Operators/plus.png" type="Texture" id=3]
[ext_resource path="res://Assets/square_missing.png" type="Texture" id=4]
[ext_resource path="res://Buttons/MovableButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Buttons/FadingLabel.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/GenericLevel.tscn" type="PackedScene" id=7]
[ext_resource path="res://Level20.gd" type="Script" id=8]
[ext_resource path="res://Assets/TextureButtons/MAINMENU0.png" type="Texture" id=9]
[ext_resource path="res://Assets/TextureButtons/MAINMENU.png" type="Texture" id=10]

[node name="Level20" instance=ExtResource( 7 )]
script = ExtResource( 8 )

[node name="TrueRect" parent="." index="0"]
margin_left = 360.168
margin_top = 189.281
margin_right = 376.168
margin_bottom = 205.281

[node name="Button" parent="." index="4"]
margin_left = 439.817
margin_top = 475.65
margin_right = 529.817
margin_bottom = 491.65
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )

[node name="FadingLabel" parent="." index="6" instance=ExtResource( 6 )]
margin_left = 229.387
margin_top = 70.9264
margin_right = 443.387
margin_bottom = 95.9264
rect_scale = Vector2( 3, 3 )
bbcode_enabled = false
bbcode_text = ""
text = "THANKS FOR PLAYING"

[node name="TextureRect" type="TextureRect" parent="." index="7"]
margin_left = 417.65
margin_top = 241.034
margin_right = 433.65
margin_bottom = 257.034
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="TextureRect2" type="TextureRect" parent="." index="8"]
margin_left = 487.496
margin_top = 245.002
margin_right = 503.496
margin_bottom = 261.002
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="TextureRect3" type="TextureRect" parent="." index="9"]
margin_left = 554.167
margin_top = 241.827
margin_right = 570.167
margin_bottom = 257.827
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="MovableButton" parent="." index="10" instance=ExtResource( 5 )]
anchor_top = 0.00111237
anchor_bottom = 0.00111237
margin_left = 125.316
margin_top = 268.413
margin_right = 141.316
margin_bottom = 284.413
texture_normal = ExtResource( 1 )
text = ExtResource( 1 )

[node name="FadingLabel2" parent="." index="11" instance=ExtResource( 6 )]
margin_left = 399.107
margin_top = 376.915
margin_right = 529.107
margin_bottom = 396.915
rect_scale = Vector2( 2, 2 )
bbcode_enabled = false
bbcode_text = ""
text = "LESS IS MORE"
